manifests/janktm/clay/saturn/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saturn
  namespace: clay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saturn
  template:
    metadata:
      labels:
        app: saturn
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: saturn
          image: ghcr.io/janktm/jam/saturn:latest
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
