manifests/janktm/clay/saturn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saturn
  namespace: clay
spec:
  selector:
    app: saturn
  ports:
    - port: 3000
      targetPort: 3000
