manifests/janktm/clay/saturn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clay-saturn
  namespace: clay
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - clay-saturn.janktm.wuguishifu.dev
      secretName: clay-saturn-tls
  rules:
    - host: clay-saturn.janktm.wuguishifu.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: saturn
                port:
                  number: 3000
